@@ -90,14 +90,17 @@ istream_invoke_direct(struct istream *istream, istream_direct_t type, int fd,
 #endif
 
     nbytes = istream->handler->direct(type, fd, max_length, istream->handler_ctx);
+    assert(nbytes >= -3);
     assert(nbytes < 0 || (size_t)nbytes <= max_length);
-    assert(nbytes == 0 || !istream->eof);
+    assert(nbytes == -3 || !istream->eof);
 
 #ifndef NDEBUG
     if (pool_denotify(&notify) || istream->destroyed) {
-        assert(nbytes == 0);
+        assert(nbytes == -3);
         return nbytes;
     }
+
+    assert(nbytes != -3);
 
     istream->in_data = false;
 
