@@ -4,6 +4,7 @@ cm4all-beng-proxy (0.6.24) unstable; urgency=low
   * istream: separate TCP splicing checks
   * istream-pipe: fix segmentation fault after incomplete direct transfer
   * direct: support splice() from TCP socket to pipe
+  * istream: direct() returns -3 if stream has been closed
   * allow 8192 connections by default
   * allow 65536 file handles by default
 
